ENEX FSL/snapshotDownload (1)/objects/Pricebook2.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>MDA__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>MDA</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>Mineria__c</fullName><defaultValue>false</defaultValue><externalId>false</externalId><label>Mineria</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>Producto__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Producto</label><referenceTo>Product2</referenceTo><relationshipLabel>Listas de precios</relationshipLabel><relationshipName>Listas_de_precios</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><listViews><fullName>Lista_de_precios_SGME</fullName><columns>PRICEBOOK2.NAME</columns><columns>PRICEBOOK2.DESCRIPTION</columns><columns>PRICEBOOK2.LAST_UPDATE</columns><columns>PRICEBOOK2.IS_ACTIVE</columns><filterScope>Everything</filterScope><filters><field>Mineria__c</field><operation>equals</operation><value>0</value></filters><filters><field>PRICEBOOK2.NAME</field><operation>notEqual</operation><value>Standard Price Book</value></filters><filters><field>MDA__c</field><operation>equals</operation><value>0</value></filters><label>Lista de precios SGME</label><sharedTo><role>Administrador_Estaciones_de_Servicio_SGME</role></sharedTo></listViews><listViews><fullName>Lista_de_precios_SGMM</fullName><columns>PRICEBOOK2.NAME</columns><columns>PRICEBOOK2.IS_ACTIVE</columns><columns>PRICEBOOK2.DESCRIPTION</columns><columns>PRICEBOOK2.LAST_UPDATE</columns><filterScope>Everything</filterScope><filters><field>Mineria__c</field><operation>equals</operation><value>1</value></filters><filters><field>PRICEBOOK2.NAME</field><operation>notEqual</operation><value>Standard Price Book</value></filters><label>Lista de precios SGMM</label><language>es</language><sharedTo><role>Administrador_Mineria_SGMM</role></sharedTo></listViews><listViews><fullName>Todas_las_listas</fullName><columns>PRICEBOOK2.NAME</columns><columns>PRICEBOOK2.IS_ACTIVE</columns><columns>PRICEBOOK2.DESCRIPTION</columns><columns>PRICEBOOK2.LAST_UPDATE</columns><filterScope>Everything</filterScope><label>Todas las listas</label></listViews><sharingModel>Private</sharingModel></CustomObject>